# EvoMind

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_experiment.py  strategy.py
data/: GD_power_spot_15min_data.xlsx
epm/: __init__.py
epm/autoresearch/: extreme_days.py  ratchet.py  static_scanner.py
epm/backtest/: __init__.py  fidelity.py
epm/cli/: __init__.py
epm/data/: validators.py
epm/decision/: __init__.py  realtime_agent.py  stochastic_program.py
epm/decision/control_by_model/: __init__.py
epm/decision/robust_mdp/: __init__.py  fqi_gbm.py  reward.py
epm/prediction/load_agent/: predict.py  program.md  train.py
epm/prediction/price_agent/: __init__.py  predict.py
epm/prediction/renewable_agent/: __init__.py
epm/risk/: lattice.py  lt_spot.py  sv_model.py
epm/supervision/: meta_coordinator.py
src/: backtest_gd.py  baseline_strategy.py  cal_strategy_profit.py  data_process.py  main.py
src/epm/autoresearch/: __init__.py  champion_challenger.py  runner.py  walk_forward.py
src/epm/backtest/: engine.py  settlement.py
src/epm/cli/: decide.py  monthly_review.py  settle.py
src/epm/config/: __init__.py  market_rules.py  settings.py
src/epm/data/: __init__.py  feature_store.py  loader.py  scenarios.py
src/epm/prediction/: __init__.py
src/epm/risk/: __init__.py  var_cvar.py
src/epm/supervision/: __init__.py  compliance.py  risk_guard.py
tests/: test_imports.py  test_lattice.py  test_lt_spot.py  test_ratchet.py  test_settlement.py  test_static_scanner.py  test_var_cvar.py  test_walk_forward.py
(+14 files in other folders)
